--- a/style.css
+++ b/style.css
@@ -1,112 +1,231 @@
-html {
-  font-family: Roboto, sans-serif;
-  --primary-color: #2f80ed;
-  --secondary-color: #333333;
-  --bg-color: #fff;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&family=Open+Sans:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap');
+body.cv
+{
+    margin: 0;
+    font-family: 'Open Sans', sans-serif;
+    color: #3b3b3b;
+}
+body.cv a{
+    text-decoration: none;
+}
+body.cv a:hover{ 
+    border: none;
+}
+.cv-h1, .cv-h2{
+    margin: 0;
+    font-family: 'Montserrat', sans-serif;
+}
+.container{
+    margin-right: auto;
+    margin-left: auto;
+    padding: 0 15px;
+}
+.cv-orange{
+    background-color: #3088ec;
+}
+.cv-grey{
+    background-color: #3b3b3b;
+}
+.cv-white{
+    background-color: #f1f1ef;
+}
+.cv-sec{
+    padding: 0 30px;
+}
+.cv-h2{
+    margin-bottom: 15px;
+    padding-bottom: 7px;
+    border-bottom: 1px solid #3088ec;
+}
+/* ----------------------------------------------------------- */
+/* .block-left */
+.cv-photoname{
+    padding: 30px;
+}
+.cv-h1{
+    margin: 10px 0;
+    font-size: 2em;
+    color: #010000;
+}
+.cv-figure{
+    margin: 0;
+}
+.cv-photo{
+    max-width: 100%;
+}
+.cv-contacts{
+    padding: 30px;
+}
+.cv-skills{
+    padding-bottom: 30px;
+}
+.cv-contacts,
+.cv-contacts a{
+    color: #ffffff;
+    
+}
+.contacts-link{
+    border-bottom: 1px solid #ffffff;
+}
+.contacts-list{
+    list-style: none;
+    padding: 0;
+}
+.contacts-item{
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+.contacts-item img{
+    width: 40px;
+    margin-right: 10px;
+}
+.contacts-linkimg{
+    border: none;
 }
 
-html[data-theme='dark-mode'] {
-  font-family: Roboto, sans-serif;
-  --primary-color: #2f80ed;
-  --secondary-color: #fff;
-  --bg-color: #222121;
+.cv-skills-list{
+    color: #ffffff;
+    list-style: none;
+    padding-left: 15px;
 }
-
-body {
-  background-color: var(--bg-color);
-  position: relative;
+.cv-skills-item{
+    position: relative;
+    margin-bottom: 7px;
 }
-
-* {
-  color: var(--secondary-color);
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-.cv {
-  max-width: 900px;
-  margin: 20px auto;
-  padding: 10px;
-}
-
-h1 {
-  color: var(--primary-color);
-  margin-bottom: 0.25em;
-}
-
-h2 {
-  font-size: 1em;
-  margin-top: 0;
-  margin-bottom: 1em;
-}
-
-h3 {
-  color: var(--primary-color);
-  margin-bottom: 1em;
-}
-
-a {
-  color: var(--primary-color);
-}
-
-section {
-  margin-bottom: 2em;
-}
-
-.dark {
-  position: absolute;
-  top: 20px;
-  right: 5px;
-}
-
-.contacts {
-  margin-bottom: 2em;
-}
-
-.contacts .contact {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.contacts .contact__type {
-  min-width: 90px;
-}
-
-.expirience {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-bottom: 2em;
-}
-
-.expirience__name {
-  font-weight: bold;
-  margin-bottom: 1em;
-}
-
-.expirience__date {
-  min-width: 250px;
-}
-
-@media (max-width: 575px) {
-  .cv {
-    margin: 10px;
-  }
-  .expirience {
+.cv-skills-item::before{
+    content: "";
+    position: absolute;
+    left: -15px;
+    top: calc(50% - 3px);
     display: block;
-  }
+    height: 6px;
+    width: 6px;
+    background-color: #3088ec;
+    border-radius: 100%;
+}
+/* ----------------------------------------------------------- */
+/* .block-right */
+.block-right .cv-sec{
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+.block-right .cv-h2{
+    position: relative;
+    padding-left: 40px;
+}
+.block-right .cv-h2 img{
+    position: absolute;
+    left: 0;
+    width: 30px;
+}
+.block-right .cv-sec.cv-english{
+    padding-bottom: 30px;
+}
+.block-right .cv-sec.cv-summary{
+    padding-top: 30px;
+}
+.cv-codeblock{
+    overflow: auto;
+    background-color: #3b3b3b;
+    color: #ffffff;
+    padding: 0 20px;
 }
 
-html.transition,
-html.transition * {
-  -webkit-transition: all 750ms !important;
-  transition: all 750ms !important;
-  -webkit-transition-delay: 0 !important;
-          transition-delay: 0 !important;
+.cv-codeblock code{
+    font-family: Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New;
 }
 
+.cv-h2-white{
+    color: #ffffff;
+}
+.cv-white a{
+    color: #3b3b3b;
+    border-bottom: 1px solid #3b3b3b;
+}
 
-/*# sourceMappingURL=style.css.map */
+.cv-table-row:nth-child(2n){
+    background-color: #e6e6e6;
+}
+.cv-table-td{
+    padding: 15px 20px;
+}
+/* ----------------------------------------------------------- */
+.cv-footer{
+    color: #3b3b3b;
+    background-color: #3088ec;
+}
+.cv-footer a{
+    color:#3b3b3b;
+    border-bottom: 1px solid #3b3b3b;
+}
+.cv-footer-item{
+    padding: 15px;
+    text-align: center;
+}
+.cv-footer-img{
+    width: 100px;
+}
+
+@media (min-width: 576px){
+    .container{
+        margin-top: 15px;
+        margin-bottom: 15px;
+        margin-right: auto;
+        margin-left: auto;
+        max-width: 540px;
+        padding: 0;
+        -webkit-box-shadow: -5px 5px 20px 5px rgba(34, 60, 80, 0.3);
+        -moz-box-shadow: -5px 5px 20px 5px rgba(34, 60, 80, 0.3);
+        box-shadow: -5px 5px 20px 5px rgba(34, 60, 80, 0.3);
+    }       
+}
+@media (min-width: 768px){
+    .container{
+        max-width: 720px;
+    }
+    .cv-main{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .block-left{
+        width: 30%;
+    }
+    .block-right{
+        width: 70%;
+    } 
+    
+    .cv-table-row{
+        display: flex;
+    }
+    .cv-table-td:nth-child(1){
+        width: 30%;
+        max-width: 150px;
+        /* border-right: 1px solid #3b3b3b; */
+    } 
+    .cv-table-td:nth-child(2){
+        width: 70%;
+    } 
+    .cv-footer{
+        display: flex;
+        align-items: center;
+    }
+    .cv-footer-item{
+        width: 33.33%;
+    }
+}
+@media (min-width: 992px){
+    .container{
+        max-width: 960px;
+    }       
+}
+@media (min-width: 1200px){
+    .container{
+        max-width: 1140px;
+    }   
+}
+@media (min-width: 1400px){
+    .container{
+        max-width: 1320px;
+    }
+}
